--- a/poc.yml
+++ b/poc.yml
@@ -1,3 +1,3 @@
 appOptions:
-  baseDataUri: "poc.yml from git"
-  fetchInterval: "00:05:00"
+  baseDataUri: "poc.yml from git updated"
+  fetchInterval: "01:05:00"
