--- a/config1/poc-config1.yml
+++ b/config1/poc-config1.yml
@@ -1,2 +1,3 @@
-baseDataUri: "https://opendata.nederlandwereldwijd.nl/v1/sources/nederlandwereldwijd/infotypes/traveladvice"
-fetchInterval: "00:05:00"
+contracts:
+  id: 1
+  name: "contract 1"
